// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input can have onBlur 1`] = `
.c0 {
  background: transparent;
  border: none;
  color: #1C1C1C;
  font-size: 0.2rem;
  height: 100%;
  padding: 10px 20px;
  margin: 0px;
  width: 100%;
  outline: none;
  font-family: Roboto;
  font-weight: 300;
  font-size: 0.2rem;
  line-height: 1em;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c0::-moz-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c0:-ms-input-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c0::placeholder {
  color: #1C1C1C;
  font-style: italic;
}

@media (min-width:768px) and (max-width:1024px) {
  .c0 {
    font-size: 0.5rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    font-size: 1rem;
  }
}

<input
  class="c0"
  data-testid="input"
  value="input value"
/>
`;

exports[`Input can have onFocus 1`] = `
.c0 {
  background: transparent;
  border: none;
  color: #1C1C1C;
  font-size: 0.2rem;
  height: 100%;
  padding: 10px 20px;
  margin: 0px;
  width: 100%;
  outline: none;
  font-family: Roboto;
  font-weight: 300;
  font-size: 0.2rem;
  line-height: 1em;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c0::-moz-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c0:-ms-input-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c0::placeholder {
  color: #1C1C1C;
  font-style: italic;
}

@media (min-width:768px) and (max-width:1024px) {
  .c0 {
    font-size: 0.5rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    font-size: 1rem;
  }
}

<input
  class="c0"
  data-testid="input"
  value="input value"
/>
`;

exports[`Input should be disabled 1`] = `
<DocumentFragment>
  .c1 {
  background: transparent;
  border: none;
  color: #1C1C1C;
  font-size: 0.2rem;
  height: 100%;
  padding: 10px 20px;
  margin: 0px;
  width: 100%;
  outline: none;
  font-family: Roboto;
  font-weight: 300;
  font-size: 0.2rem;
  line-height: 1em;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1::-webkit-input-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c1::-moz-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c1:-ms-input-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c1::placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #E9E8E7;
  border: 1px solid #1C1C1C;
  box-sizing: border-box;
  border-radius: 25px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: horizontal;
  -ms-flex-direction: horizontal;
  flex-direction: horizontal;
  height: 30px;
  background: #A8B4BE;
}

@media (min-width:768px) and (max-width:1024px) {
  .c1 {
    font-size: 0.5rem;
  }
}

@media (min-width:1025px) {
  .c1 {
    font-size: 1rem;
  }
}

<div
    class="c0"
    disabled=""
  >
    <input
      class="c1"
      data-testid="input"
      disabled=""
      value="input value"
    />
  </div>
</DocumentFragment>
`;

exports[`Input should be disabled 2`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
-     class=\\"sc-dlfnbm pfMHK\\"
+     class=\\"sc-dlfnbm hRVNym\\"
+     disabled=\\"\\"
    >
      <input
        class=\\"sc-gsTCUz hqDQSC\\"
        data-testid=\\"input\\"
+       disabled=\\"\\"
        value=\\"input value\\"
      />
    </div>
  </DocumentFragment>"
`;

exports[`Input should be invalid 1`] = `
<DocumentFragment>
  .c1 {
  background: transparent;
  border: none;
  color: #1C1C1C;
  font-size: 0.2rem;
  height: 100%;
  padding: 10px 20px;
  margin: 0px;
  width: 100%;
  outline: none;
  font-family: Roboto;
  font-weight: 300;
  font-size: 0.2rem;
  line-height: 1em;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1::-webkit-input-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c1::-moz-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c1:-ms-input-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c1::placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #E9E8E7;
  border: 1px solid #1C1C1C;
  box-sizing: border-box;
  border-radius: 25px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: horizontal;
  -ms-flex-direction: horizontal;
  flex-direction: horizontal;
  height: 30px;
  border: 2px solid #A62218;
}

.c0 input {
  color: #A62218;
}

@media (min-width:768px) and (max-width:1024px) {
  .c1 {
    font-size: 0.5rem;
  }
}

@media (min-width:1025px) {
  .c1 {
    font-size: 1rem;
  }
}

<div
    class="c0"
  >
    <input
      class="c1"
      data-testid="input"
      value="input value"
    />
  </div>
</DocumentFragment>
`;

exports[`Input should be invalid 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <div
-     class=\\"sc-dlfnbm pfMHK\\"
+     class=\\"sc-dlfnbm exDEKU\\"
    >
      <input
        class=\\"sc-gsTCUz hqDQSC\\"
        data-testid=\\"input\\"
        value=\\"input value\\""
`;

exports[`Input should render a left icon 1`] = `
@media (min-width:768px) and (max-width:1024px) {

}

@media (min-width:1025px) {

}

<svg
  data-testid="search-icon"
  fill="currentColor"
  height="1em"
  stroke="currentColor"
  stroke-width="0"
  viewBox="0 0 512 512"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
  />
</svg>
`;

exports[`Input should render correctly 1`] = `
.c0 {
  background: transparent;
  border: none;
  color: #1C1C1C;
  font-size: 0.2rem;
  height: 100%;
  padding: 10px 20px;
  margin: 0px;
  width: 100%;
  outline: none;
  font-family: Roboto;
  font-weight: 300;
  font-size: 0.2rem;
  line-height: 1em;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c0::-moz-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c0:-ms-input-placeholder {
  color: #1C1C1C;
  font-style: italic;
}

.c0::placeholder {
  color: #1C1C1C;
  font-style: italic;
}

@media (min-width:768px) and (max-width:1024px) {
  .c0 {
    font-size: 0.5rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    font-size: 1rem;
  }
}

<input
  class="c0"
  data-testid="input"
  value="input value"
/>
`;
